@@ -1,3 +1,6 @@
+* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 6.0.3-0
+- Added Puppet 5 and OEL support
+
 * Thu Jun 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
 - Advance beyond bad changelog entry
 
